Document list avater image alignment problem solved

--- a/geonode/static/geonode/css/style.css
+++ b/geonode/static/geonode/css/style.css
@@ -2590,6 +2590,7 @@ ul#global-errors li{
     height:180px;
     max-width:240px;
     overflow: hidden;
+    text-align: center;
 }
 
 .grid-container.lmd .avater .avater-img-mid{
